[gd_scene load_steps=18 format=3 uid="uid://dqhc1a1233nt4"]

[ext_resource type="Script" path="res://Scenes/Player/ui.gd" id="1_echso"]
[ext_resource type="PackedScene" uid="uid://b82fv4j54eyej" path="res://Scenes/Effects/ready_intro.tscn" id="2_72e41"]
[ext_resource type="Texture2D" uid="uid://xuofhrtq65nm" path="res://Art/MiscUI/Hud_Gem.png" id="8_d2h46"]
[ext_resource type="Texture2D" uid="uid://cps65sw656odu" path="res://Art/MiscUI/Hud_Charge_Bar_Insides.png" id="9_fx4ob"]
[ext_resource type="PackedScene" uid="uid://nffbgp1naxa1" path="res://Scenes/Misc/menus/pause_ui.tscn" id="10_8q51k"]
[ext_resource type="Texture2D" uid="uid://oeek0uhc8dxo" path="res://Art/MiscUI/UI_Pad_Button_Active.png" id="10_70ygl"]
[ext_resource type="Material" uid="uid://ddxdry6i1fggp" path="res://Scenes/Player/outline_shader.tres" id="10_p4cfi"]
[ext_resource type="Texture2D" uid="uid://cvtew5gvp3egp" path="res://Art/MiscUI/UI_Pad_Button_Inactive.png" id="10_xf6ea"]
[ext_resource type="Texture2D" uid="uid://3uh7f8cf67ga" path="res://Art/MiscUI/Hud_Charge_Bar_Pellet.png" id="10_yidrv"]
[ext_resource type="Texture2D" uid="uid://chgiseah4lbl6" path="res://Art/MiscUI/Hud_Charge_Bar_Top_Layer.png" id="11_1mytq"]
[ext_resource type="Texture2D" uid="uid://dk4ppja2v34bb" path="res://Art/MiscUI/UI_SP_Attack_Sheet.png" id="11_7n4mv"]
[ext_resource type="Texture2D" uid="uid://ctgsw0nxfbwx2" path="res://Art/MiscUI/Hud_Charge_Bar_Pellet_Endcap.png" id="12_j8ewg"]
[ext_resource type="Texture2D" uid="uid://d1aqotassip3b" path="res://Art/MiscUI/Hud_Health_Bar.png" id="13_1dkpj"]
[ext_resource type="Texture2D" uid="uid://c4q7jr8l0356y" path="res://Art/MiscUI/Hud_Health_Energy.png" id="14_1xsce"]

[sub_resource type="Animation" id="Animation_juq0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WholeScreen/WhiteOut:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WholeScreen/WhiteOut:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_d2wun"]
resource_name = "Whiteout"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WholeScreen/WhiteOut:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WholeScreen/WhiteOut:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vrxe1"]
_data = {
"RESET": SubResource("Animation_juq0u"),
"Whiteout": SubResource("Animation_d2wun")
}

[node name="UI" type="CanvasLayer" groups=["UI Elements"]]
script = ExtResource("1_echso")

[node name="WholeScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyIntroControl" parent="WholeScreen" instance=ExtResource("2_72e41")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -3.5
offset_right = 3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2

[node name="LowerColorBar" type="ColorRect" parent="WholeScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.862
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.91199
grow_horizontal = 2
grow_vertical = 0
color = Color(0.14902, 0.14902, 0.137255, 1)

[node name="HudGem" type="Sprite2D" parent="WholeScreen"]
position = Vector2(16, 211)
texture = ExtResource("8_d2h46")
hframes = 2

[node name="ChargeBar" type="Node2D" parent="WholeScreen"]
position = Vector2(113, 210.58)

[node name="1stPellet" type="Node2D" parent="WholeScreen/ChargeBar"]

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/1stPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/1stPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -8.0
offset_right = 6.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("10_yidrv")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/1stPellet"]
texture = ExtResource("11_1mytq")
hframes = 3

[node name="2ndPellet" type="Node2D" parent="WholeScreen/ChargeBar"]
position = Vector2(13, 0)

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/2ndPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2
frame = 1

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/2ndPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("12_j8ewg")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/2ndPellet"]
texture = ExtResource("11_1mytq")
hframes = 3
frame = 2

[node name="3rdPellet" type="Node2D" parent="WholeScreen/ChargeBar"]
visible = false
position = Vector2(26, 0)

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/3rdPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2
frame = 1

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/3rdPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("12_j8ewg")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/3rdPellet"]
texture = ExtResource("11_1mytq")
hframes = 3
frame = 2

[node name="4thPellet" type="Node2D" parent="WholeScreen/ChargeBar"]
visible = false
position = Vector2(39, 0)

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/4thPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2
frame = 1

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/4thPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("12_j8ewg")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/4thPellet"]
texture = ExtResource("11_1mytq")
hframes = 3
frame = 2

[node name="5thPellet" type="Node2D" parent="WholeScreen/ChargeBar"]
visible = false
position = Vector2(52, 0)

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/5thPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2
frame = 1

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/5thPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("12_j8ewg")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/5thPellet"]
texture = ExtResource("11_1mytq")
hframes = 3
frame = 2

[node name="6thPellet" type="Node2D" parent="WholeScreen/ChargeBar"]
visible = false
position = Vector2(65, 0)

[node name="Backing" type="Sprite2D" parent="WholeScreen/ChargeBar/6thPellet"]
texture = ExtResource("9_fx4ob")
hframes = 2
frame = 1

[node name="Pellet" type="TextureProgressBar" parent="WholeScreen/ChargeBar/6thPellet"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 16.0
rounded = true
fill_mode = 3
texture_progress = ExtResource("12_j8ewg")

[node name="Front" type="Sprite2D" parent="WholeScreen/ChargeBar/6thPellet"]
texture = ExtResource("11_1mytq")
hframes = 3
frame = 2

[node name="HealthBar" type="Node2D" parent="WholeScreen"]
position = Vector2(66, 211)

[node name="Container" type="Sprite2D" parent="WholeScreen/HealthBar"]
texture = ExtResource("13_1dkpj")
hframes = 2
vframes = 5

[node name="1stHealthBar" type="TextureProgressBar" parent="WholeScreen/HealthBar"]
offset_left = -24.0
offset_top = -6.0
offset_right = 24.0
offset_bottom = -1.0
max_value = 16.0
value = 16.0
texture_progress = ExtResource("14_1xsce")

[node name="2ndHealthBar" type="TextureProgressBar" parent="WholeScreen/HealthBar"]
offset_left = -24.0
offset_top = 1.0
offset_right = 24.0
offset_bottom = 6.0
max_value = 16.0
texture_progress = ExtResource("14_1xsce")

[node name="DefensiveButtons" type="Node2D" parent="WholeScreen"]
position = Vector2(210, 210)

[node name="TopButton" type="TextureRect" parent="WholeScreen/DefensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -3.0
offset_top = -11.0
offset_right = 4.0
offset_bottom = -3.0
texture = ExtResource("10_xf6ea")
stretch_mode = 2

[node name="RightButton" type="TextureRect" parent="WholeScreen/DefensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = 4.0
offset_top = -3.0
offset_right = 11.0
offset_bottom = 5.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="LeftButton" type="TextureRect" parent="WholeScreen/DefensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -10.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = 5.0
texture = ExtResource("10_xf6ea")
stretch_mode = 2

[node name="BottomButton" type="TextureRect" parent="WholeScreen/DefensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -3.0
offset_top = 5.0
offset_right = 4.0
offset_bottom = 13.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="TopButtonAttack" type="Sprite2D" parent="WholeScreen/DefensiveButtons"]
position = Vector2(0, -8)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 7

[node name="RightButtonAttack" type="Sprite2D" parent="WholeScreen/DefensiveButtons"]
position = Vector2(7, 0)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 8

[node name="LeftButtonAttack" type="Sprite2D" parent="WholeScreen/DefensiveButtons"]
position = Vector2(-7, 0)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 7

[node name="BottomButtonAttack" type="Sprite2D" parent="WholeScreen/DefensiveButtons"]
position = Vector2(0, 8)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3

[node name="OffensiveButtons" type="Node2D" parent="WholeScreen"]
position = Vector2(242, 210)

[node name="TopButton" type="TextureRect" parent="WholeScreen/OffensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -3.0
offset_top = -11.0
offset_right = 4.0
offset_bottom = -3.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="RightButton" type="TextureRect" parent="WholeScreen/OffensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = 4.0
offset_top = -3.0
offset_right = 11.0
offset_bottom = 5.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="LeftButton" type="TextureRect" parent="WholeScreen/OffensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -10.0
offset_top = -3.0
offset_right = -3.0
offset_bottom = 5.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="BottomButton" type="TextureRect" parent="WholeScreen/OffensiveButtons"]
material = ExtResource("10_p4cfi")
offset_left = -3.0
offset_top = 5.0
offset_right = 4.0
offset_bottom = 13.0
texture = ExtResource("10_70ygl")
stretch_mode = 2

[node name="TopButtonAttack" type="Sprite2D" parent="WholeScreen/OffensiveButtons"]
position = Vector2(0, -8)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 4

[node name="RightButtonAttack" type="Sprite2D" parent="WholeScreen/OffensiveButtons"]
position = Vector2(7, 0)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 11

[node name="LeftButtonAttack" type="Sprite2D" parent="WholeScreen/OffensiveButtons"]
position = Vector2(-7, 0)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 3

[node name="BottomButtonAttack" type="Sprite2D" parent="WholeScreen/OffensiveButtons"]
position = Vector2(0, 8)
texture = ExtResource("11_7n4mv")
hframes = 6
vframes = 3
frame = 16

[node name="WhiteOut" type="ColorRect" parent="WholeScreen"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vrxe1")
}

[node name="PauseUI" parent="." instance=ExtResource("10_8q51k")]
